fixed photos that are not showing

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -326,7 +326,7 @@ main{
     width: 90%;
     background-color: $grayish;
     margin: 0 auto;
-    background-image: linear-gradient(to top, rgba(236,82,66,0),  rgba(236,82,66,1)), url("/img/computer.jpg");
+    background-image: linear-gradient(to top, rgba(236,82,66,0),  rgba(236,82,66,1)), url(./img/computer.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
